--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,5 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="seed">#8B323131</color>
+    <color name="md_theme_dark_primary">#BCC2FF</color>
+    <color name="md_theme_dark_onPrimary">#1C2678</color>
+    <color name="md_theme_dark_primaryContainer">#343E90</color>
+    <color name="md_theme_dark_onPrimaryContainer">#DFE0FF</color>
+    <color name="md_theme_dark_secondary">#C4C5DD</color>
+    <color name="md_theme_dark_onSecondary">#2D2F42</color>
+    <color name="md_theme_dark_secondaryContainer">#8B323131</color>
+    <color name="md_theme_dark_onSecondaryContainer">#E0E0F9</color>
+    <color name="md_theme_dark_tertiary">#E7B9D6</color>
+    <color name="md_theme_dark_onTertiary">#45263C</color>
+    <color name="md_theme_dark_tertiaryContainer">#5E3C54</color>
+    <color name="md_theme_dark_onTertiaryContainer">#FFD7EF</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#1B1B1F</color>
+    <color name="md_theme_dark_onBackground">#E4E1E6</color>
+    <color name="md_theme_dark_surface">#1B1B1F</color>
+    <color name="md_theme_dark_onSurface">#E4E1E6</color>
+    <color name="md_theme_dark_surfaceVariant">#46464F</color>
+    <color name="md_theme_dark_onSurfaceVariant">#C7C5D0</color>
+    <color name="md_theme_dark_outline">#91909A</color>
+    <color name="md_theme_dark_inverseOnSurface">#1B1B1F</color>
+    <color name="md_theme_dark_inverseSurface">#E4E1E6</color>
+    <color name="md_theme_dark_inversePrimary">#4D57A9</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#BCC2FF</color>
+    <color name="md_theme_dark_outlineVariant">#46464F</color>
+    <color name="md_theme_dark_scrim">#000000</color>
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
