--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,7 +8,7 @@
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/zaujmy"
+        android:icon="@drawable/vyber_webstranka"
         android:title="@string/title_dashboard" />
 
 </menu>
