--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,7 @@
         <TextView
             android:id="@+id/status_bar_space"
             android:layout_width="match_parent"
-            android:layout_height="50sp"
+            android:layout_height="10dp"
             android:background="@color/card"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBaseline_toTopOf="parent"
